src/objects/Campaign_Project__c.object
<CustomObject>
    <fields>
        <fullName>APS_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APS Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Of_Participants__c</fullName>
        <description>Actual # Of Participants</description>
        <inlineHelpText>Actual # Of Participants</inlineHelpText>
        <label>Actual # Of Participants</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Label__c</fullName>
        <formula>IF( CONTAINS(RecordType.Name , &apos;Standalone Creative&apos;) , &apos;C&apos;, &apos;S&apos;) +
TEXT( YEAR(Valid_Start_Date__c)) +
TEXT(  Creative_Tier__c ) +
&apos;_&apos; +
TEXT( Market__r.Market_Code__c ) + 
&apos;_&apos; +
 Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Project_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to case associated with this campaign in order to show the milestones</description>
        <inlineHelpText>Lookup to case associated with this campaign in order to show the milestones</inlineHelpText>
        <label>Campaign Project Milestones</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Campaign Projects</relationshipLabel>
        <relationshipName>Campaign_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Project_Type__c</fullName>
        <description>Campaign Type</description>
        <label>Campaign Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Standalone</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Redemption_Channel__c</fullName>
        <label>Campaign Redemption Channel</label>
        <picklist>
            <picklistValues>
                <fullName>PlaybyTR-Mobile messaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Table Voucher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital RSVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Rewards.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Play by TR - Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing (Host)-Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center - Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 line reader (slot Machine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRISM display (slot Machine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosks APS Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosks TR Enhanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TotalRewards.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instagram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snapchat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yelp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Table</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign Time Valid</label>
        <picklist>
            <picklistValues>
                <fullName>Duration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Creative_Brief_Required__c</fullName>
        <description>Indicate if creative brief is required</description>
        <inlineHelpText>N/A: T3
Studio: T1 or T2
Digital: 
Digital &amp; Studio : T1 or T2</inlineHelpText>
        <label>Creative Brief Required</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio_Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Creative_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Creative Required</description>
        <inlineHelpText>Creative Required</inlineHelpText>
        <label>Studio Creative Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creative_Tier__c</fullName>
        <description>Creative Tier</description>
        <inlineHelpText>Creative Tier</inlineHelpText>
        <label>Creative Tier</label>
        <picklist>
            <controllingField>Creative_Brief_Required__c</controllingField>
            <picklistValues>
                <fullName>T1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMC_Text__c</fullName>
        <formula>TEXT(Direct_Marketing_Center__r.DMC_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMC (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Channel__c</fullName>
        <globalPicklist>Delivery_Channel</globalPicklist>
        <label>Campaign Delivery Channel</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Mail_Drop_Date__c</fullName>
        <description>Drop Date for Direct Mail</description>
        <inlineHelpText>Drop Date for Direct Mail</inlineHelpText>
        <label>Campaign Direct Mail Drop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Mail_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Direct Mail Required. If checked, additional details will be required</description>
        <inlineHelpText>Direct Mail Required. If checked, additional details will be required</inlineHelpText>
        <label>Direct Mail Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Marketing_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Direct Marketing Center (DMC)</description>
        <inlineHelpText>Direct Marketing Center (DMC)</inlineHelpText>
        <label>Direct Marketing Center</label>
        <referenceTo>Direct_Marketing_Center__c</referenceTo>
        <relationshipLabel>Campaign Projects</relationshipLabel>
        <relationshipName>Campaign_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <description>Disclaimer</description>
        <inlineHelpText>Disclaimer</inlineHelpText>
        <label>Disclaimer</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Drop_Date__c</fullName>
        <description>Drop date for Campaign Email</description>
        <inlineHelpText>Drop date for Campaign Email</inlineHelpText>
        <label>Campaign Email Drop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate  if Email Setting is required. Check if Email channel is selected</description>
        <inlineHelpText>Indicate  if Email Setting is required. Check if Email channel is selected</inlineHelpText>
        <label>Email Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Activity_Information__c</fullName>
        <description>Event Activity Information</description>
        <inlineHelpText>Event Activity Information</inlineHelpText>
        <label>Event Activity Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Announcement_Review_Notes__c</fullName>
        <description>Event Announcement Review Notes</description>
        <inlineHelpText>Event Announcement Review Notes</inlineHelpText>
        <label>Event Announcement Review Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Announcement_Title__c</fullName>
        <description>Event Announcement Title</description>
        <inlineHelpText>Event Announcement Title</inlineHelpText>
        <label>Event Announcement Title</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Contact__c</fullName>
        <description>Event Contact</description>
        <inlineHelpText>Event Contact</inlineHelpText>
        <label>Event Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Criteria__c</fullName>
        <label>Event Criteria</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Details_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event Details Required</description>
        <inlineHelpText>Event Details Required</inlineHelpText>
        <label>Event Details Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Details__c</fullName>
        <description>Event Details</description>
        <inlineHelpText>Event Details</inlineHelpText>
        <label>Event Details</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Expiration_Date__c</fullName>
        <description>Latest date encompassed in the event schedule</description>
        <inlineHelpText>Latest date encompassed in the event schedule</inlineHelpText>
        <label>Event Expiration Date</label>
        <summarizedField>Campaign_Project_Event_Date__c.Event_Date__c</summarizedField>
        <summaryForeignKey>Campaign_Project_Event_Date__c.Campaign_Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Event_Setup_and_Preparation_Notes__c</fullName>
        <description>Event Setup and Preparation Notes</description>
        <inlineHelpText>Event Setup and Preparation Notes</inlineHelpText>
        <label>Event Setup and Preparation Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Valid_Date__c</fullName>
        <description>Earliest date encompassed in the event schedule</description>
        <inlineHelpText>Earliest date encompassed in the event schedule</inlineHelpText>
        <label>Event Valid Date</label>
        <summarizedField>Campaign_Project_Event_Date__c.Event_Date__c</summarizedField>
        <summaryForeignKey>Campaign_Project_Event_Date__c.Campaign_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expected_of_Participants__c</fullName>
        <description>Expected # of Participants</description>
        <inlineHelpText>Expected # of Participants</inlineHelpText>
        <label>Expected # of Participants</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guest_Viewable_Channel__c</fullName>
        <label>Guest Viewable Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Chatbot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital RSVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instagram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosks APS Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosks TR Enhanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Play by TR Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Play by TR Mobile Push Messages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Play by TR Offers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRISM display (slot Machine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS (text messaging)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snapchat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TotalRewards.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yelp</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Market_Text__c</fullName>
        <formula>Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Market (Campaign and Marketing)</description>
        <inlineHelpText>Market (Campaign and Marketing)</inlineHelpText>
        <label>Market</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Market__c.Active_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Campaign Projects</relationshipLabel>
        <relationshipName>Campaign_Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Properties__c</fullName>
        <description>Number of Properties associated with this campaign project</description>
        <inlineHelpText>Number of Properties associated with this campaign project</inlineHelpText>
        <label>Number of Properties</label>
        <summaryForeignKey>Campaign_Project_Property__c.Campaign_Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>POD_Leadership_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POD Leadership Review Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POD_Specialist_Role__c</fullName>
        <description>The queue for the POD specialist assigned to this campaign</description>
        <inlineHelpText>The queue for the POD specialist assigned to this campaign</inlineHelpText>
        <label>POD Specialist Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POD_Text__c</fullName>
        <formula>TEXT(POD__r.POD_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POD (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>POD</description>
        <inlineHelpText>POD</inlineHelpText>
        <label>POD</label>
        <referenceTo>POD__c</referenceTo>
        <relationshipLabel>Campaign Projects</relationshipLabel>
        <relationshipName>Campaign_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Marketer_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Marketer Approval Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redemption_Channel__c</fullName>
        <globalPicklist>Redemption_Channel</globalPicklist>
        <label>Redemption Channel</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reference_Previous_Project_Name__c</fullName>
        <description>Reference Previous Project Name</description>
        <inlineHelpText>Reference Previous Project Name</inlineHelpText>
        <label>Reference Previous Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regulatory_Approval_Code__c</fullName>
        <description>Regulatory Approval Code</description>
        <inlineHelpText>Regulatory Approval Code</inlineHelpText>
        <label>Regulatory Approval Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservation_Phone_Number__c</fullName>
        <description>Reservation Phone Number</description>
        <inlineHelpText>Reservation Phone Number</inlineHelpText>
        <label>Reservation Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rules_Regulations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if there are any state rules or regulations required</description>
        <inlineHelpText>Indicate if there are any state rules or regulations required</inlineHelpText>
        <label>Rules &amp; Regulations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Images_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sample Images Attached</description>
        <inlineHelpText>Sample Images Attached</inlineHelpText>
        <label>Sample Images Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selling_Point1__c</fullName>
        <description>Selling point for event notification</description>
        <inlineHelpText>Selling point for event notification</inlineHelpText>
        <label>Selling Point1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selling_Point2__c</fullName>
        <description>Selling point for event notification</description>
        <inlineHelpText>Selling point for event notification</inlineHelpText>
        <label>Selling Point2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selling_Point3__c</fullName>
        <description>Selling point for event notification</description>
        <inlineHelpText>Selling point for event notification</inlineHelpText>
        <label>Selling Point3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrap Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMC Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POD Approved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Studio_Account_Exec_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Studio Account Exec Approval Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Studio_Copywriting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Studio Copywriting</description>
        <inlineHelpText>Studio Copywriting</inlineHelpText>
        <label>Studio Copywriting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Studio_Markup_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Studio Markup PDF(s) Attached?</description>
        <inlineHelpText>Studio Markup PDF(s) Attached?</inlineHelpText>
        <label>Studio Markup Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Studio_Notes__c</fullName>
        <description>Studio Notes</description>
        <inlineHelpText>Studio Notes</inlineHelpText>
        <label>Studio Notes</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Studio_Project_Tier__c</fullName>
        <description>Studio Project Tier</description>
        <inlineHelpText>Studio Project Tier</inlineHelpText>
        <label>Studio Project Tier</label>
        <picklist>
            <controllingField>Creative_Required__c</controllingField>
            <picklistValues>
                <fullName>T1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Studio_Ship_Date__c</fullName>
        <description>Studio Ship Date</description>
        <inlineHelpText>Studio Ship Date</inlineHelpText>
        <label>Studio Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ticket_Price__c</fullName>
        <description>Ticket Price</description>
        <inlineHelpText>Ticket Price</inlineHelpText>
        <label>Ticket Price</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Translation_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Translation Needed</description>
        <inlineHelpText>Translation Needed</inlineHelpText>
        <label>Translation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_End_Date__c</fullName>
        <description>Valid End Date</description>
        <inlineHelpText>Valid End Date</inlineHelpText>
        <label>Campaign Valid End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_End_Hour__c</fullName>
        <globalPicklist>Hour</globalPicklist>
        <label>Campaign Valid End Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_End_Minute__c</fullName>
        <description>Valid End Minute</description>
        <globalPicklist>Minute_Offer</globalPicklist>
        <inlineHelpText>Valid End Minute</inlineHelpText>
        <label>Campaign Valid End Minute</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_Start_Date__c</fullName>
        <description>Valid Start Date</description>
        <inlineHelpText>Valid Start Date</inlineHelpText>
        <label>Campaign Valid Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_Start_Hour__c</fullName>
        <globalPicklist>Hour</globalPicklist>
        <label>Campaign Valid Start Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_Start_Minute__c</fullName>
        <globalPicklist>Minute_Offer</globalPicklist>
        <label>Campaign Valid Start Minute</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Rejection_Reason__c</fullName>
        <description>Vendor Rejection Reasons</description>
        <inlineHelpText>Vendor Rejection Reasons</inlineHelpText>
        <label>Vendor Rejection Reason</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Campaign Project</label>
    <listViews>
        <fullName>ACM_DNC_Campaign_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>ACM - DMC</label>
        <queue>ACM_DMC_CP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACM_POD_Manager_CP_Campaign_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>ACM - POD Manager</label>
        <queue>ACM_POD_Manager_CP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Label__c</columns>
        <columns>Market__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Valid_Start_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Text__c</field>
            <operation>equals</operation>
            <value>ACM</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Calendar_2017_Atlantic_Cit</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Marketing Calendar - 2017 - AC</label>
    </listViews>
    <nameField>
        <displayFormat>CP{00000000}</displayFormat>
        <label>Campaign Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Projects</pluralLabel>
    <recordTypes>
        <fullName>Draft</fullName>
        <active>true</active>
        <description>Campaign Project in Draft Status</description>
        <label>Draft</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard Campaign Project</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>